[package]
name = "rnzb"
version = "0.0.0"
edition = "2024"
rust-version = "1.89"
resolver = "3"

[lib]
name = "rnzb"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
nzb-rs = { version = "0.6.0", features = ["serde"] }
pyo3 = { version = "0.26.0", features = [
    "extension-module",
    "chrono",
    "generate-import-lib",
    "serde",
] }
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.145"

[features]
abi3 = ["pyo3/abi3"]
